fix calendr